--- a/package.json
+++ b/package.json
@@ -1,43 +1,76 @@
 {
-  "name": "gobarber-web",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+   "name": "gobarber-web",
+   "version": "0.1.0",
+   "private": true,
+   "dependencies": {
+      "@testing-library/jest-dom": "^5.11.4",
+      "@testing-library/react": "^11.1.0",
+      "@testing-library/user-event": "^12.1.10",
+      "@types/axios": "^0.14.0",
+      "@types/jest": "^26.0.15",
+      "@types/node": "^12.0.0",
+      "@types/react": "^16.9.53",
+      "@types/react-dom": "^16.9.8",
+      "@types/uuid": "^8.3.0",
+      "@types/yup": "^0.29.9",
+      "@unform/core": "^2.1.3",
+      "@unform/web": "^2.1.3",
+      "axios": "^0.21.0",
+      "polished": "^4.0.5",
+      "react": "^17.0.1",
+      "react-dom": "^17.0.1",
+      "react-icons": "^4.1.0",
+      "react-scripts": "4.0.1",
+      "react-spring": "^8.0.27",
+      "styled-components": "^5.2.1",
+      "typescript": "^4.1.2",
+      "uuid": "^8.3.1",
+      "web-vitals": "^0.2.4",
+      "yup": "^0.31.1"
+   },
+   "devDependencies": {
+      "@types/jest": "^26.0.15",
+      "@types/node": "^12.0.0",
+      "@types/react": "^16.9.53",
+      "@types/react-dom": "^16.9.8",
+      "@types/react-router-dom": "^5.1.6",
+      "@types/styled-components": "^5.1.4",
+      "@typescript-eslint/eslint-plugin": "^4.8.1",
+      "@typescript-eslint/parser": "^4.8.1",
+      "eslint": "7.11.0",
+      "eslint-config-airbnb": "^18.2.1",
+      "eslint-config-prettier": "^6.15.0",
+      "eslint-import-resolver-typescript": "^2.3.0",
+      "eslint-plugin-import": "^2.21.2",
+      "eslint-plugin-jsx-a11y": "^6.3.0",
+      "eslint-plugin-prettier": "^3.1.4",
+      "eslint-plugin-react": "^7.20.0",
+      "eslint-plugin-react-hooks": "^4",
+      "prettier": "^2.2.1",
+      "ts-node-dev": "^1.0.0"
+   },
+   "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test",
+      "eject": "react-scripts eject"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest"
+      ]
+   },
+   "browserslist": {
+      "production": [
+         ">0.2%",
+         "not dead",
+         "not op_mini all"
+      ],
+      "development": [
+         "last 1 chrome version",
+         "last 1 firefox version",
+         "last 1 safari version"
+      ]
+   }
 }
