--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --inspect --transpile-only src/server.ts",
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+    "start": "ts-node-dev src/shared/infra/http/server.ts",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register  --inspect --transpile-only src/shared/infra/http/server.ts",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -37,6 +38,7 @@
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.1.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
   }
 }
