--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,14 @@
         "prettier"
     ],
     "rules": {
+      "@typescript-eslint/naming-convention": [
+        "error",
+        {
+          "selector": "interface",
+          "prefix": ["I"],
+          "format": ["PascalCase"]
+        }
+      ],
       "class-methods-use-this": "off",
       "@typescript-eslint/no-unused-vars": ["error", {
         "argsIgnorePattern": "_"
