--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/cors": "^2.8.8",
+    "@types/jest": "^26.0.19",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
@@ -23,7 +24,8 @@
     "build": "tsc",
     "start": "ts-node-dev src/shared/infra/http/server.ts",
     "dev:server": "ts-node-dev -r tsconfig-paths/register  --inspect --transpile-only src/shared/infra/http/server.ts",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -38,7 +40,9 @@
     "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.6.3",
     "prettier": "^2.1.2",
+    "ts-jest": "^26.4.4",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.0.5"
   }
