--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "dependencies": {
     "@types/cors": "^2.8.8",
     "@types/jest": "^26.0.19",
+    "@types/nodemailer": "^6.4.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.17",
     "pg": "^8.4.2",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^1.0.0",
